--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "mern",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.13.0",
+    "yarn": "1.12.1"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
